<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="320dp"
    android:layout_height="80dp"
    android:layout_margin="4dp"
    android:background="@drawable/my_shape"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/date"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_margin="2dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/platzHalterDatum" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tempValue"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_margin="2dp"
            android:layout_weight="0.48"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/platzHalterTemp" />

        <Button
            android:id="@+id/buttonSynchronize"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonSynchronize" />
    </LinearLayout>

</LinearLayout> 